--- a/Trabajo Practico N1/ivy.xml
+++ b/Trabajo Practico N1/ivy.xml
@@ -1,5 +1,5 @@
 <ivy-module version="2.0">
-    <info organisation="org.apache" module="tp0-java-algo3"/>
+    <info organisation="org.apache" module="trabajo-practico-n1"/>
     <dependencies>
         <dependency org="junit" name="junit" rev="4.10"/>
     </dependencies>
