--- a/Trabajo Practico N1/build.xml
+++ b/Trabajo Practico N1/build.xml
@@ -1,4 +1,4 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="tp-final-algo3" basedir="." default="test">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="trabajo-practico-n1" basedir="." default="test">
 	<property name="build" location="build" />
 	<property name="libs" location="libs" />
 	<property name="classes.dir" location="build" />
